// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders in narrow mode 1`] = `
<DocumentFragment>
  <header
    class="headerBar"
  >
    <mock-withstoresubscriptionforheadericoncomponent
      deps="[object Object]"
    />
    <div />
    <div
      class="spacer"
    />
    <div
      class="farItems"
    />
  </header>
</DocumentFragment>
`;

exports[`Header renders in narrow mode: WithStoreSubscriptionForHeaderIconComponent props 1`] = `
{
  "deps": {
    "textContent": {
      "applicationTitle": "THE_APPLICATION_TITLE",
    },
  },
}
`;

exports[`Header renders per snapshot 1`] = `
<DocumentFragment>
  <header
    class="headerBar"
  >
    <mock-withstoresubscriptionforheadericoncomponent
      deps="[object Object]"
    />
    <span
      class="headerTitle"
    >
      THE_APPLICATION_TITLE
    </span>
    <div />
    <div
      class="spacer"
    />
    <div
      class="farItems"
    />
  </header>
</DocumentFragment>
`;

exports[`Header renders per snapshot: WithStoreSubscriptionForHeaderIconComponent props 1`] = `
{
  "deps": {
    "textContent": {
      "applicationTitle": "THE_APPLICATION_TITLE",
    },
  },
}
`;

exports[`Header renders with showFarItems equals false 1`] = `
<DocumentFragment>
  <header
    class="headerBar"
  >
    <mock-withstoresubscriptionforheadericoncomponent
      deps="[object Object]"
    />
    <span
      class="headerTitle"
    >
      THE_APPLICATION_TITLE
    </span>
    <div />
    <div
      class="spacer"
    />
  </header>
</DocumentFragment>
`;

exports[`Header renders with showFarItems equals false: WithStoreSubscriptionForHeaderIconComponent props 1`] = `
{
  "deps": {
    "textContent": {
      "applicationTitle": "THE_APPLICATION_TITLE",
    },
  },
}
`;

exports[`Header renders with showFarItems equals true 1`] = `
<DocumentFragment>
  <header
    class="headerBar"
  >
    <mock-withstoresubscriptionforheadericoncomponent
      deps="[object Object]"
    />
    <span
      class="headerTitle"
    >
      THE_APPLICATION_TITLE
    </span>
    <div />
    <div
      class="spacer"
    />
    <div
      class="farItems"
    >
      <div>
        THis is far items!
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders with showFarItems equals true: WithStoreSubscriptionForHeaderIconComponent props 1`] = `
{
  "deps": {
    "textContent": {
      "applicationTitle": "THE_APPLICATION_TITLE",
    },
  },
}
`;

exports[`Header renders without header title 1`] = `
<DocumentFragment>
  <header
    class="headerBar"
  >
    <div />
    <div
      class="spacer"
    />
    <div
      class="farItems"
    />
  </header>
</DocumentFragment>
`;

exports[`Header renders without header title: WithStoreSubscriptionForHeaderIconComponent props 1`] = `undefined`;
